# paper-reader

./: README.md  pyproject.toml
configs/crawler/: cvpr2024_3ddet.yaml  test.yaml
configs/prompt/: summarize_abstruct.yaml
confs/: cvpr2024.yaml  cvpr2024_3ddet.yaml  test.yaml
confs/crawler/: cvpr2024_3ddet.yaml
egs/: cvpr2024_3ddet.csv  cvpr2024_3ddet.md  test.csv  test.md
egs/cvpr2024/: 3ddet.csv  3ddet.md  arxiv_list.csv  paper_list.csv  translated_list.csv
src/trpy/: __init__.py  crawlers.py  list_io.py  list_writer.py  llms.py  readers.py  translators.py
