[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-reader"
version = "0.1.0"
description = "Tools for reading papers."
authors = [
    { name = "yadach", email = "47210083+yadach@users.noreply.github.com" }
]
dependencies = [
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.1",
    "requests>=2.31.0",
    "arxiv>=2.1.0",
    "fire>=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
my-hello-script = 'trpy:hello'
generate-paper-list = "trpy.bin.generate_paper_list:main"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.1",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trpy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
