[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-reader"
version = "0.1.0"
description = "Tools for reading papers."
authors = [
    { name = "yadach", email = "47210083+yadach@users.noreply.github.com" }
]
dependencies = [
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.1",
    "requests>=2.31.0",
    "arxiv>=2.1.0",
    "fire>=0.6.0",
    "tqdm>=4.66.4",
    "openai>=1.25.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
generate-paper-list = "trpy.bin.generate_paper_list:main"
search-papers = "trpy.bin.search_arxiv:main"
translate-summaries = "trpy.bin.translate_summaries:main"
convert-list = "trpy.bin.convert_list:main"
convert-to-md = "trpy.bin.convert_list:conv2md"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.1",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trpy"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "D101", "D203", "D213", "D407", "D413", "FBT001", "FBT002", "S101"]

[tool.ruff.lint.per-file-ignores]
"src/trpy/crawlers.py" = ["A00"]

[tool.ruff.lint.isort]
force-single-line = true
